--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Madineh Sarvestani"
-  avatar           : "madineh_sarvestani_headshot.png"
+  avatar           : "pic.png"
   bio              : "Post-doc at Max Planck Florida Institute for Neuroscience"
   location	   :
   employer         :
