--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Madineh Sarvestani"
+  name             : "Madineh Sedigh-Sarvestani"
   avatar           : "pic.png"
   bio              : "Post-doc at Max Planck Florida Institute for Neuroscience"
   location	   :
