--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "pic_zoom.png"
+  avatar           : "pic_zoom.jpg"
   bio              : "Post-doc at Max Planck Florida Institute for Neuroscience"
   location	   :
   employer         :
