--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : ""
   avatar           : "pic_zoom.jpg"
-  bio              : "Post-doc at Max Planck Florida Institute for Neuroscience"
+  bio              : "Assistant Professor of Neurobiology & Behavior at Cornell University, HHMI Freeman Hrabowski Scholar"
   location	   :
   employer         :
   pubmed	   :
